--- a/aboutus.html
+++ b/aboutus.html
@@ -2,17 +2,31 @@
 <html lang="en">
 
 <head>
-
     <title>Le Chocolat</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="css/css.css" rel="stylesheet">
-
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top" >
+        <div class="container">
+            <a class="navbar-brand" href="#">Le Chocolat</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse"  data-target="#Navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="./index.html"> Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </div>            
+        </div>
+    </nav>
 
     <header class="jumbotron">
         <div class="container">
@@ -122,6 +136,10 @@
         </div>
     </footer>
 
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/tether/dist/js/tether.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
