--- a/aboutus.html
+++ b/aboutus.html
@@ -27,6 +27,7 @@
             </div>            
         </div>
     </nav>
+      
 
     <header class="jumbotron">
         <div class="container">
@@ -40,6 +41,13 @@
             </div>
         </div>
     </header>
+
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+          <li class="breadcrumb-item active" aria-current="page">About us</li>
+        </ol>
+      </nav>
 
     <div>
         <div class="container">
@@ -55,7 +63,13 @@
                 <div class="col-sm-6 col">
                     <h2>Our History</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus semper nunc quis maximus pharetra. Quisque ut molestie ante. Donec mattis pharetra erat, eu ultricies ipsum faucibus et. Curabitur ultrices risus turpis, laoreet pulvinar justo interdum in. Quisque vel semper tellus. Etiam nibh arcu, sodales quis ultrices nec, egestas vitae libero. </p>
-                    <p>Nulla ultrices diam at tortor volutpat, <em>et facilisis justo facilisis</em>. Phasellus dignissim euismod mi eget dignissim. Sed eget consequat urna. </p>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                          <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                          <li class="breadcrumb-item active" aria-current="page">About us</li>
+                        </ol>
+                      </nav>
+                              <p>Nulla ultrices diam at tortor volutpat, <em>et facilisis justo facilisis</em>. Phasellus dignissim euismod mi eget dignissim. Sed eget consequat urna. </p>
                 </div>
             </div>
         </div>
