--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
     </nav>
 
+
     <div id="loginModal" class="modal fade" role="dialog">
             <div class="modal-dialog modal-lg" role="content">
                 <!-- Modal content-->
@@ -88,6 +89,100 @@
             </div>
         </div>
 
+    <div id="reserveModal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg" role="content">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Reserve </h4>
+                        <button type="button" class="close" data-dismiss="modal">&times</button>
+                    </div>
+                    <div class="modal-body">
+                            <form>
+                                <div class="form-group row">
+                                    <label class="col-12 col-sm-3 col-form-label">Number of baskets</label>
+                                    <div class="col-12 col-sm-9">
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio1" value="option1">
+                                            <label class="form-check-label" for="inlineRadio1">1</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="option2">
+                                            <label class="form-check-label" for="inlineRadio2">2</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio3" value="option3">
+                                            <label class="form-check-label" for="inlineRadio3">3</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio4" value="option4">
+                                            <label class="form-check-label" for="inlineRadio4">4</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio5" value="option5">
+                                            <label class="form-check-label" for="inlineRadio5">5</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio6" value="option6">
+                                            <label class="form-check-label" for="inlineRadio6">6</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-12 col-sm-3 col-form-label">Date and Time</label>
+                                    <div class="input-group col-12 col-sm-4">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="fa fa-calendar"
+                                                    aria-hidden="true"></i></span>
+                                        </div>
+                                        <input type="date" class="form-control" id="date">
+                                    </div>
+                                    <div class="input-group col-12 col-sm-4">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="fa fa-clock-o"
+                                                    aria-hidden="true"></i></span>
+                                        </div>
+                                        <input type="time" class="form-control" id="time">
+                                    </div>
+                                </div>
+                                <div class="form-group row ">
+                                    <label class="col-12 col-sm-3 col-form-label">
+                                        Home Delivery
+                                    </label>
+                                    <div class="col-12 col-sm-4 btn-group">
+                                            
+                                        <label type="button" class="btn btn-success">
+                                            <input type="radio" name="inlineRadioOptions" 
+                                            id="inlineRadio1" value="yes" checked> Yes
+                                        </label>
+
+                                        <label type="button" class="btn btn-danger" type="button">
+                                            <input type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio2" value="no"> No 
+                                        </label>
+
+                                    </div>
+                                </div>
+                            </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default btn-sm" 
+                            data-dismiss="modal">Cancel
+                        </button>
+                        <button type="submit" class="btn btn-primary btn-sm">
+                            Reserve
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -100,13 +195,8 @@
                     <img src="images/logo.png" class="img-fluid">
                 </div>
                 <div class="col-6 col-sm-3 align-self-center">
-                    
-                    <a type="button" class="btn btn-warning btn-sm btn-block"
-                    data-toggle="tooltip" data-html="true" 
-                    title="Or Call us at <br><strong>+ 987 6543 2100</strong>"
-                    data-placement="bottom" href="#reserve-form">
-                    Reserve your baskets
-                  </a>
+                    <a class="btn btn-warning btn-sm btn-block" data-toggle="modal" data-target="#reserveModal" role="button">Reserve your basket
+                    </a>
                 </div>
             </div>
         </div>
@@ -146,7 +236,7 @@
                                     <h2>Vasilis Wilson
                                         </h2>
                                     <p class="col d-none d-sm-block">Vasilis is well informed of all the current 
-                                        trends in pastry and contributes his innovative ideas in our products.
+                                        trends in pastry<br> and contributes his innovative ideas in our products.
                                     </p>
                                 </div>
                             </div>
@@ -168,6 +258,75 @@
                 </div>
             </div>
           </div>
+
+        <!-- <div class="row row-content justify-content-center">
+            <div class="col-12 col-sm-10">
+                <div class="card border-default">
+                    <h3 class="card-header bg-warning" style="color:white" id="reserve-form">Reserve your Baskets</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-3 col-form-label">Number of baskets</label>
+                                <div class="col-12 col-sm-9">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio1" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio2" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio3" value="option3">
+                                        <label class="form-check-label" for="inlineRadio3">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio4" value="option4">
+                                        <label class="form-check-label" for="inlineRadio4">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio5" value="option5">
+                                        <label class="form-check-label" for="inlineRadio5">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio6" value="option6">
+                                        <label class="form-check-label" for="inlineRadio6">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-3 col-form-label">Date and Time</label>
+                                <div class="input-group col-12 col-sm-4">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-calendar"
+                                                aria-hidden="true"></i></span>
+                                    </div>
+                                    <input type="date" class="form-control" id="date">
+                                </div>
+                                <div class="input-group col-12 col-sm-4">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-clock-o"
+                                                aria-hidden="true"></i></span>
+                                    </div>
+                                    <input type="time" class="form-control" id="time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-12 col-sm-3">
+                                    <button type="submit" class="btn btn-primary btn-sm">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div> -->
 
     <footer class="footer">
         <div class="container">
@@ -223,11 +382,11 @@
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
+    <!-- <script>
             $(function () {
                $('[data-toggle="tooltip"]').tooltip()
              })
-    </script>
+    </script> -->
 
 </body>
 
